--- a/src/pages/SignInPage/SignInPage.css
+++ b/src/pages/SignInPage/SignInPage.css
@@ -16,3 +16,9 @@
     padding-right: 5px;
     text-decoration: none;
 }
+.signIndiv{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
